--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <!--<color name="colorPrimary">#3F51B5</color>-->
+    <color name="colorPrimary">#25233a</color>
+    <!--<color name="colorPrimaryDark">#303F9F</color>-->
+    <color name="colorPrimaryDark">#0a0a10</color>
+    <!--<color name="colorAccent">#FF4081</color>-->
+    <!--<color name="colorAccent">#e5e5e5</color>-->
+    <color name="colorAccent">#e25d58</color>
+    <color name="color_action_mode_bg">#0a0a10</color>
+
+    <color name="btn_background">#e25d58</color>
+    <color name="btn_background_selected">#6b201d</color>
+    <color name="body_font_color">#4d606f</color>
+    <color name="hint_font_color">#bec0c2</color>
+    <color name="img_background_color">#323c46</color>
+    <color name="line_color">#e5e5e5</color>
+    <color name="hint_text_color">#bec0c2</color>
+    <color name="title_text_color">#2d3a43</color>
 </resources>
