--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,8 +4,126 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorPrimaryDark">@color/colorPrimary</item>
         <item name="colorAccent">@color/colorAccent</item>
+
+        <item name="android:textViewStyle">@style/RobotoTextViewStyle</item>
+        <item name="buttonStyle">@style/RobotoButtonStyle</item>
+        <item name="android:editTextStyle">@style/App_EditTextStyle</item>
+
+        <item name="android:colorControlNormal">@color/myControlColor</item>
+
+        <item name="android:windowActionBar">false</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="windowActionModeOverlay">true</item>
+        <item name="actionModeStyle">@style/LStyled.ActionMode</item>
+
+
+    </style>
+
+    <style name="LStyled.ActionMode" parent="@style/Widget.AppCompat.ActionMode">
+        <item name="background">@color/color_action_mode_bg</item>
+    </style>
+
+    <style name="RobotoTextViewStyle" parent="android:Widget.TextView">
+        <!--
+        <item name="android:typeface">serif</item>
+-->
+        <item name="android:fontFamily">sans-serif</item>
+    </style>
+
+    <style name="RobotoButtonStyle" parent="android:Widget.Holo.Button">
+        <item name="android:fontFamily">sans-serif</item>
+    </style>
+
+    <style name="App_EditTextStyle" parent="@android:style/Widget.EditText">
+        <item name="android:textColor">@color/body_font_color</item>
+        <item name="android:textColorHint">@color/hint_font_color</item>
+        <!--
+        <item name="android:typeface">serif</item>
+-->
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:hint">sans-serif</item>
+
+    </style>
+
+    <style name="AppTheme.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:windowBackground">@drawable/background_splash</item>
+    </style>
+
+    <style name="ProgressBarStyle" parent="@android:style/Widget.ProgressBar.Inverse" />
+
+
+    <style name="AppCompatAlertDialogStyle" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="colorAccent">#5fa3d0</item>
+        <item name="android:textColorPrimary">#000000</item>
+        <item name="android:background">#FFFFFF</item>
+    </style>
+
+    <declare-styleable name="CirclePageIndicator">
+        <attr name="indicator_spacing" format="dimension" />
+    </declare-styleable>
+
+    <style name="TitleTextViewStyle" parent="android:Widget.TextView">
+        <item name="android:textAppearance">?android:attr/textAppearanceLarge</item>
+        <item name="android:textColor">@color/title_text_color</item>
+        <item name="android:textSize">19sp</item>
+        <item name="android:textStyle">normal</item>
+
+
+    </style>
+
+    <style name="TextViewLabelHeading" parent="@android:style/TextAppearance">
+        <!--<item name="android:textSize">20sp</item>-->
+        <item name="android:textAppearance">?android:attr/textAppearanceMedium</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="TitleViewLine" parent="@android:style/Widget.KeyboardView">
+        <!--<item name="android:textSize">20sp</item>-->
+        <item name="android:layout_width">40dp</item>
+        <item name="android:layout_height">2dp</item>
+        <item name="android:background">@color/btn_background</item>
+        <item name="android:layout_marginTop">4dp</item>
+        <item name="android:textColor">@color/body_font_color</item>
+    </style>
+
+    <style name="ProfileImageView">
+        <item name="android:layout_width">70dp</item>
+        <item name="android:layout_height">70dp</item>
+        <item name="android:layout_gravity">center_horizontal|center_vertical</item>
+        <item name="android:layout_centerHorizontal">true</item>
+        <item name="android:background">@drawable/default_user</item>
+        <item name="android:scaleType">centerCrop</item>
+    </style>
+
+    <style name="SubmitButton" parent="android:style/Widget.Button">
+        <item name="android:textSize">18sp</item>
+        <item name="android:layout_height">60dp</item>
+        <item name="android:layout_marginTop">@dimen/fields_margin</item>
+        <item name="android:layout_marginBottom">@dimen/fields_margin</item>
+        <item name="android:layout_gravity">center_horizontal|center_vertical</item>
+        <item name="android:background">@drawable/custom_submit_btn</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="TransButton" parent="Widget.AppCompat.Button.Borderless.Colored">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/title_text_color</item>
+        <item name="android:layout_gravity">center_horizontal|center_vertical</item>
+        <item name="android:textAllCaps">false</item>
+
     </style>
 
 </resources>
