--- a/app/src/main/res/layout/activity_confirm_otp.xml
+++ b/app/src/main/res/layout/activity_confirm_otp.xml
@@ -14,32 +14,18 @@
         <include layout="@layout/tool_bar"/>
 
     </android.support.design.widget.AppBarLayout>
-
 <LinearLayout
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.grabdeals.shop.ui.LoginActivity">
-
-
-    <!-- Login progress -->
-    <ProgressBar
-        android:id="@+id/login_progress"
-        style="?android:attr/progressBarStyleLarge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:visibility="gone" />
+    tools:context="com.grabdeals.shop.ui.ConfirmOTPActivity">
 
     <ScrollView
-        android:id="@+id/login_form"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <LinearLayout
-            android:layout_marginTop="50dp"
-            android:id="@+id/email_login_form"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingBottom="@dimen/activity_vertical_margin"
@@ -47,85 +33,91 @@
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_vertical_margin"
             android:orientation="vertical">
+            <RelativeLayout
+                android:layout_marginTop="@dimen/fields_margin"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/fields_margin">
+
+                <ImageView
+                    android:id="@+id/image_shop"
+                    style="@style/ProfileImageView" />
+
+
+                <ImageView
+                    android:background="@drawable/circle_background_shape"
+                    android:id="@+id/iv_camera"
+                    android:padding="6dp"
+                    android:layout_width="28dp"
+                    android:layout_height="28dp"
+                    android:layout_alignBottom="@+id/image_shop"
+                    android:layout_alignEnd="@+id/image_shop"
+                    android:layout_alignRight="@+id/image_shop"
+                    android:src="@drawable/photo_camera" />
+                <TextView
+                    android:layout_alignBottom="@+id/iv_camera"
+                    android:layout_toEndOf="@+id/iv_camera"
+                    android:layout_toRightOf="@+id/iv_camera"
+                    android:text=" Upload shop photo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+            </RelativeLayout>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:gravity="left"
                 style="@style/TitleTextViewStyle"
-                android:text="Sign in"/>
-
+                android:text="Verify Phone number"/>
             <View
                 style="@style/TitleViewLine"></View>
 
-            <android.support.design.widget.TextInputLayout
-                android:layout_marginTop="@dimen/fields_margin_top"
-                android:layout_marginLeft="@dimen/fields_margin"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <EditText
-                    android:id="@+id/phone_no"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/prompt_mobile_no"
-                    android:imeOptions="actionNext"
-                    android:inputType="number"
-                    android:maxLines="1"
-                    android:maxLength="10"
-                     />
-
-            </android.support.design.widget.TextInputLayout>
-
+            <TextView
+                android:layout_marginTop="@dimen/fields_margin"
+                android:id="@+id/otp_sent_to"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="OTP SMS sent to " />
 
             <android.support.design.widget.TextInputLayout
                 android:layout_marginTop="@dimen/fields_margin"
-                android:layout_marginLeft="@dimen/fields_margin"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
                 <EditText
-                    android:id="@+id/password"
+                    android:id="@+id/enter_otp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/prompt_password"
-                    android:imeActionId="@+id/login"
-                    android:imeActionLabel="@string/action_sign_in_short"
-                    android:imeOptions="actionUnspecified"
-                    android:inputType="textPassword"
+                    android:hint="@string/prompt_enter_otp"
+                    android:imeOptions="actionDone"
+                    android:inputType="phone"
                     android:maxLines="1"
                     android:singleLine="true" />
 
             </android.support.design.widget.TextInputLayout>
 
-              <LinearLayout
-                  android:layout_marginLeft="@dimen/btn_margin_left"
-                  android:layout_width="match_parent"
-                  android:layout_height="wrap_content">
-
-                  <Button
-                      android:id="@+id/btn_sign_in"
-                      style="@style/SubmitButton"
-                      android:layout_width="match_parent"
-                      android:text="@string/action_sign_in"
-                      />
-              </LinearLayout>
 
 
             <Button
-                android:id="@+id/btn_forgot_pass"
+                android:id="@+id/btn_verify"
+                style="@style/SubmitButton"
+                android:layout_width="match_parent"
+                android:text="@string/action_verify"
+                />
+            <TextView
+                android:layout_marginTop="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                style="@style/TransButton"
-                android:textSize="14sp"
-                android:text="@string/action_forgot_your_details"/>
+                android:text="@string/msg_otp_resend"/>
 
             <Button
                 android:layout_marginTop="@dimen/fields_margin"
-                android:id="@+id/btn_create_acc"
+                android:id="@+id/btn_resend_otp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 style="@style/TransButton"
-                android:text="@string/action_create_new_acc"/>
+                android:text="@string/action_resend_otp"
+                />
 
         </LinearLayout>
     </ScrollView>
