--- a/app/src/debug/res/menu/menu_offer_details.xml
+++ b/app/src/debug/res/menu/menu_offer_details.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="primehealthcare.physcrounds.ui.PatientsListActivity">
-    <item
+    <!--<item
         android:id="@+id/action_edit"
         android:orderInCategory="100"
         android:title="@string/action_share"
@@ -15,7 +15,7 @@
         android:orderInCategory="200"
         android:title="@string/action_delete"
         app:showAsAction="ifRoom|withText"
-        android:icon="@android:drawable/ic_menu_delete" />
+        android:icon="@android:drawable/ic_menu_delete" />-->
 
     <!--<item
         android:id="@+id/action_fav"
