--- a/app/src/main/res/layout/content_fullscreen_image.xml
+++ b/app/src/main/res/layout/content_fullscreen_image.xml
@@ -20,7 +20,7 @@
             android:id="@+id/pager"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
-        <com.grabdeals.shop.ui.CirclePageIndicator
+        <com.grabdeals.customer.ui.CirclePageIndicator
             android:id="@+id/indicator"
             android:gravity="bottom|center_horizontal"
             app:indicator_spacing="5dp"
