--- a/app/src/main/res/layout/nav_header_main_drawer.xml
+++ b/app/src/main/res/layout/nav_header_main_drawer.xml
@@ -12,7 +12,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
-    <com.grabdeals.shop.util.NetworkImageViewRounded
+    <com.grabdeals.customer.util.NetworkImageViewRounded
         android:id="@+id/imageView"
         android:layout_width="75dp"
         android:layout_height="75dp"
